# dgx-fun

./: .gitignore  CLAUDE.md  README.md  batch_status.py  bench-decode.sh  bench-longctx-needle.sh  bench-prefill.sh  build-corpus.py  campaigngen-enhance-summary-spark-test.md  closet-llm-prefix-cache.md  closets-as-themes.md  committee.py  current-setup.md  desktop-chat-clients.md  dgx-spark-calibration-report.md  dnd-session-prep-with-opus.md  driving-gpu-throughput.md  embed-ab.py  finetune-qwen-on-dnd-plan.md  gemma-vs-qwen-ab.md  gemma4-26b-moe-observations.md  gemma4-26b-moe-runbook.md  gpu-reservation-and-kv-tradeoffs.md  lib-precheck.sh  lib-vllm-spinup.sh  local-compute-as-experiment-capital.md  model-comparisons.md  nemotron3-nano-30b-observations.md  nemotron3-nano-30b-test-plan.md  nemotron3-super-120b-observations.md  ngrok-cursor-plan.md  opencode-spark-longctx.sh  opencode.md  pyproject.toml  qwen-14b-voice-ceiling.md  qwen3-next-80b-observations.md  qwen35-122b-2box-observations.md  refresh-current-setup.sh  sglang-qwen3-next-spark2-observations.md  spark-cli-design.md  (+31 more)
dgxlib/: ARCHITECTURE.md  README.md  __init__.py  client.py  discovery.py  models.yaml  registry.py  retry.py
tests/: test_client_stream.py  test_registry.py
